# monolynx

./: .dockerignore  .env.example  .gitignore  .gitlab-ci-other-projecy-example.yml  .gitlab-ci.yml  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  Next Steps JIRA.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  generate_errors.py  install_skills.sh  pyproject.toml  skills-lock.json
.claude/: launch.json
.claude/agents/: backend-developer.md  code-reviewer.md  database-specialist.md  devops-infra.md  frontend-developer.md  qa-tester.md  technical-writer.md
.claude/skills/: asyncio  dockerfile-optimise  fastapi-async-patterns
alembic/: env.py
alembic/versions/: 1646e3dd1199_add_source_field_to_issue.py  1694c9ca760f_add_wiki_attachment_and_wiki_file_tables.py  1bdf28994010_monitoring_tables.py  1eb0cc243ef5_add_ticket_comments.py  2714988cc76e_add_labels.py  28f96fce5af4_add_user_management_fields.py  3e87493c1b6f_add_issue_id_to_tickets.py  423272ec69fe_add_description_to_projects.py  5688aeb98fbc_initial_tables.py  7bb77af09979_add_heartbeat_model.py  7c5d4f074843_merge_heartbeat_and_google_id_heads.py  85f88b78d72c_add_scrum_tables_project_members_.py  9531ee58f111_add_ticket_comments.py  a1b2c3d4e5f6_add_time_tracking_entries.py  a79c5a7c5c7b_add_notification_config_and_last_alert_.py  b2c3d4e5f6a7_add_ticket_numbering.py  c3d4e5f6a7b8_add_created_via_ai_to_time_tracking.py  d4e5f6a7b8c9_add_wiki_pages_table.py  de9a49f6e3ae_add_user_api_tokens_and_created_via_ai.py  dff18bdf0cf7_add_monitors_and_monitor_checks_tables.py  e19de60bf3c0_add_ticket_attachments.py  e48df4ceb99e_add_activity_log_table.py  e5f6a7b8c9d0_add_wiki_embeddings_table.py  f6a7b8c9d0e1_add_oauth_tables.py  fcbd8345f9bf_add_due_date_to_tickets.py  g7b8c9d0e1f2_add_google_id_to_users.py
cicd/: sync_graph.py
docs/: mcp-oauth-blueprint.md  mcp-oauth21-implementation-guide.md
requirements/: base.txt  dev.txt  test.txt
scripts/: send_errors.py
sdk/: pyproject.toml
sdk/src/monolynx_sdk/: __init__.py  client.py  config.py  fingerprint.py  middleware.py  payload.py  transport.py  utils.py
sdk/src/open_sentry_sdk/: __init__.py  client.py  config.py  middleware.py  payload.py  transport.py  utils.py
skills/: asyncio  dockerfile-optimise  fastapi-async-patterns
src/monolynx/: __init__.py  cli.py  config.py  constants.py  database.py  features.py  main.py  mcp_server.py  worker.py
src/open_sentry/: __init__.py  cli.py  config.py  constants.py  database.py  main.py  mcp_server.py
tests/: conftest.py
(+265 files in other folders)
