[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-sentry-sdk"
version = "0.1.0"
description = "Minimalistyczny error tracker dla Django -- SDK klienckie"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "django>=4.2",
    "responses>=0.25",
    "pytest-cov>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_sentry_sdk"]
